--- a/C语言/C和指针_读书笔记/第09章 字符串字符字节.md
+++ b/C语言/C和指针_读书笔记/第09章 字符串字符字节.md
@@ -396,11 +396,35 @@ void* memmove(void* dest, const void* src, size_t n) {
 
 `void *memchr(const void *str, int c, size_t n) `
 
-- 在参数 **str** 所指向的字符串的前 **n** 个字节中搜索第一次出现字符 **c**
+- 在参数 **str** 所指向的字符串的前 **n** 个字节中搜索第一次出现字符 **c**的位置
+
+```c
+#include <stdio.h>
+#include <string.h>
+ 
+int main ()
+{
+   const char str[] = "http://www.runoob.com";
+   const char ch = '.';
+   char *ret;
+ 
+   ret = (char*)memchr(str, ch, strlen(str));
+ 
+   printf("|%c| 之后的字符串是 - |%s|\n", ch, ret);
+ 
+   return(0);
+}
+```
+
+```
+|.| 之后的字符串是 - |.runoob.com|
+```
+
+
 
 ### **9.5 memset**
 
 `void *memset(void *str, int c, size_t n) `
 
 - 复制字符 **c**（一个无符号字符）到参数 **str** 所指向的字符串的前 **n** 个字符。
-- `memset(buffer, 0, SIZE);` 把buffer的前SIZE个字节都初始化为0
+- `memset(buffer, 0, SIZE);` 把buffer的前SIZE个字节都初始化为0 
