--- a/C语言/C和指针_读书笔记/第17章 经典抽象数据结构.md
+++ b/C语言/C和指针_读书笔记/第17章 经典抽象数据结构.md
@@ -1,15 +1,399 @@
-**1. 堆栈接口**
+### **1. 内存分配**
 
-/* 堆栈的接口 */ #define STACK_TYPE int void push(STACK_TYPE value); void pop(void); STACK_TYPE top(void); int is_empty(void); int is_full(void);
+- 静态数组
+- 动态分配数组
+- 动态分配的链式结构
 
-**1.1 静态数组编写**
 
-\#include "stack.h" #include <assert.h> #define STACK_SIZE 100 static STACK_TYPE stack[STACK_SIZE]; static int top_element = -1; void push(STACK_TYPE value) {    assert(!is_full());    top_element += 1;    stack[top_element]=value; } void pop(void) {    assert(!is_empty());    top_elemrnt -= 1; } STACK_TYPE top(void) {    assert(!is_empty());    return stack[top_element]; } int is_empty(void) {    return top_element==-1; } int is_full(void) {    return top_element == STACK_SIZE - 1; }
 
-STACK_TYPE pop(void) {    STACK_TYPE temp;    assert(!is_empty());    tm=stack[top_element];    top_element -= 1;    return temp; }
+### **2. 堆栈**
 
-**1.2 动态数组编写**
+#### **1.1 堆栈接口**
 
-\#include "stack.h" #include <stdio.h> #include <stdlib.h> #include <malloc.h> #include <assert.h> static STACK_TYPE *stack; static size_t stack_size; static int top_element=-1; void create_stack(size_t size) {    assert(stzck_size==0);    stack_size=size;    stack=malloc(stack_size*sizeof(STACK_TYPE));    assert(stack!=NULL); } void destroy_stack(void) {    assert(stack_size>0);    stack_size=0;    free(stack);    stack=NULL; } void push(STACK_TYPE value) {    assert(!is_full());    top_element += 1;    stack[top_element]=value; } void pop(void) {    assert(!is_empty());    top_element -= 1; } STACK_TYPE top(void) {    assert(!is_empty());    return stack[top_element]; } int is_empty(void) {    assert(stack_size>0);    return top_element == -1; } int is_full(void) {    assert(stack_size>0);    return top_element==stack_size-1; }
+```C
+/* 堆栈的接口 */ 
+#define STACK_TYPE int 
 
-**1.3 链式堆栈**
+void push(STACK_TYPE value); 
+void pop(void); 
+
+STACK_TYPE top(void); 
+
+int is_empty(void); 
+int is_full(void);
+```
+
+
+
+#### **1.2 静态数组编写**
+
+```C
+#include "stack.h" 
+#include <assert.h> 
+
+#define STACK_SIZE 100 
+
+static STACK_TYPE stack[STACK_SIZE]; 
+static int top_element = -1; 
+
+void push(STACK_TYPE value) {    
+    assert(!is_full());    
+    top_element += 1;    
+    stack[top_element]=value; 
+} 
+
+void pop(void) {    
+    assert(!is_empty());    
+    top_elemrnt -= 1; 
+} 
+
+STACK_TYPE top(void) {    
+    assert(!is_empty());    
+    return stack[top_element]; 
+} 
+
+int is_empty(void) {   
+    return top_element==-1; 
+} 
+
+int is_full(void) {    
+    return top_element == STACK_SIZE - 1; 
+}
+
+STACK_TYPE pop(void) {    
+    STACK_TYPE temp;    
+    assert(!is_empty());    
+    temp = stack[top_element];    
+    top_element -= 1;    
+    return temp; 
+    
+    // 可以简化为
+    // assert(!is_empty());
+    // return stack[top_element--];
+}
+```
+
+
+
+#### **1.3 动态数组编写**
+
+```C
+// 一个动态分配数组实现堆栈，堆栈的长度在创建堆栈函数被调用时给出
+
+#include "stack.h" 
+#include <stdio.h> 
+#include <stdlib.h> 
+#include <malloc.h> 
+#include <assert.h> 
+
+static STACK_TYPE *stack; 
+static size_t stack_size; 
+static int top_element=-1; 
+
+void create_stack(size_t size) {    
+    assert(stzck_size==0);    
+    stack_size=size;    
+    stack=malloc(stack_size*sizeof(STACK_TYPE));    
+    assert(stack!=NULL); 
+} 
+
+void destroy_stack(void) {    
+    assert(stack_size>0);    
+    stack_size=0;    
+    free(stack);    
+    stack=NULL;
+} 
+
+void push(STACK_TYPE value) {    
+    assert(!is_full());    
+    top_element += 1;    
+    stack[top_element]=value; 
+} 
+
+void pop(void) {    
+    assert(!is_empty());    
+    top_element -= 1; 
+} 
+
+STACK_TYPE top(void) {    
+    assert(!is_empty());    
+    return stack[top_element]; 
+} 
+
+int is_empty(void) {    
+    assert(stack_size>0);    
+    return top_element == -1; 
+} 
+
+int is_full(void) {    
+    assert(stack_size>0);    
+    return top_element==stack_size-1; 
+}
+```
+
+
+
+#### **1.4 链式堆栈**
+
+```C
+#include "stack.h"
+#include <stdio.h>
+#include <stdlib.h>
+#include <malloc.h>
+#include <assert.h>
+
+#define FALSE 0
+
+// 定义一个结构体存储堆栈元素， 其中next字段指向堆栈的下一个元素
+typedef struct STACK_NODE{
+    STACK_TYPE value;
+    struct STACK_NODE *next;
+}StackNode;
+
+//指向堆栈中第一个节点的指针
+static StackNode *stack;
+
+//create_stack
+void create_stack( size_t size ){
+
+}
+
+// destroy stack
+void destroy_stack(void){
+    while(!is_empty()){
+        pop();
+    }
+}
+
+// push
+void push( STACK_TYPE value ){
+    StackNode *new_node;
+
+    new_node = malloc(sizeof(StackNode));
+    assert(new_node != NULL);
+    new_node->value = value;
+    new_node->next = stack;
+    stack = new_node;
+}
+
+// pop
+void pop(void){
+    StackNode *first_node;
+    assert(!is_empty());
+    first_node = stack;
+    stack= first_node->next;
+    free(first_node);
+}
+
+// top
+STACK_TYPE top(void){
+    assert(!is_empty());
+    return stack->value;
+}
+
+// is_empty
+int is_empty(){
+    return stack == NULL;
+}
+
+// is_full
+int is_full(void){
+    return FALSE;
+}
+```
+
+
+
+
+
+### **3. 队列**
+
+
+
+#### 3.1 队列接口
+
+```C
+
+// 一个队列的接口
+
+#include <stdlib.h>
+
+#define QUEUE_TYPE int  //队列元素类型
+
+//create queue
+void create_queue(size_t size);
+
+// destroy_queue
+void destroy_queue(void);
+
+// insert
+void insert( QUEUE_TYPE value );
+
+// delete
+void delete( void );
+
+// first
+QUEUE_TYPE first( void );
+
+// is_empty
+int is_empty(void);
+
+// is_full
+int is_full(void);
+```
+
+#### 3.2 数组队列
+
+```C
+// 一个静态数组实现队列，数组的长度只能通过修改#define定义并重新编译模块进行调整
+// 使用不完全填满数组的策略区分空队列和满队列
+
+
+#include "queue.h"
+#include <stdio.h>
+#include <assert.h>
+
+#define QUEUE_SIZE 100 // 队列中元素的最大数量
+#define ARRAY_SIZE (QUEUE_SIZE + 1) //数组长度
+
+// 用于存储队列元素的数字和指向队列头尾指针
+static QUEUE_TYPE queue[ARRAY_SIZE];
+static size_t front = 1;
+static size_t rear = 0;
+
+// insert
+void insert(QUEUE_TYPE value){
+    assert(!is_full());
+    rear = (rear+1)%ARRAY_SIZE;
+    queue[rear] = value;
+}
+
+// delete
+void delete( void ){
+    assert( !is_empty() );
+    front = (front + 1)%ARRAY_SIZE;
+}
+
+// first
+QUEUE_TYPE first( void ){
+    assert(!is_empty());
+    return queue[front];
+}
+
+// is_empty
+int is_empty( void ){
+    return (rear+1)%ARRAY_SIZE == front;
+}
+
+// is_full
+int is_full(void){
+    return (rear+2) % ARRAY_SIZE == front;
+}
+```
+
+
+
+
+
+#### **4. 二叉搜索树**
+
+#### 4.1 二叉搜索树中插入
+
+```
+如果树为空：
+	将新值作为根节点插入
+否则：
+	如果新值小于当前结点值：
+		把新值插入到当前节点的左子树
+    否则：
+    	把新值插入到当前节点的右子树
+```
+
+#### 4.2 从二叉搜索树中删除结点
+
+- 删除没有孩子的节点
+  - 直接删除
+- 删除只有一个孩子的节点
+  - 将当前节点的父节点与孩子节点连接起来
+- 删除有两个孩子的节点
+  - 删除左子树中值最大的节点，并用这个值代替原先应该被删除的那个节点的值
+
+
+
+### 4.3 在二叉搜索树中查找
+
+```
+如果树为空：
+	这个值不在树中
+否则：
+	如果这个值与根节点的值相等：
+		成功找到这个值
+    否则：
+    	如果这个值小于根节点的值：
+    		查找左子树
+    	否则：
+    		查找右子树
+```
+
+
+
+
+
+#### 4.4 树的遍历
+
+- 前序
+- 中序
+- 后序
+- 层序
+
+
+
+#### 4.5 二叉搜索树的接口
+
+```C
+// 二叉搜索树模块的接口
+
+#define TREE_TYPE int
+
+// insert
+void insert(TREE_TYPE value);
+
+// find
+TREE_TYPE *find(TREE_TYPE value);
+
+// 前序遍历
+void pre_order_traverse(void (*callback)(TREE_TYPE value));
+```
+
+
+
+#### 4.6 实现二叉搜索树
+
+##### 4.6.1 数组形式
+
+> 假定熟的根节点是第1个节点
+>
+> 节点N的双亲是N/2
+>
+> 节点N的左孩子是2N
+>
+> 节点N的右孩子是2N+1
+
+> 基于0下标的数组规则
+>
+> 节点N的双亲是（N+1)/2-1
+>
+> 节点N的左孩子是 2N+1
+>
+> 节点N的右孩子是 2N+2
+
+```C
+
+```
+
+
+
+
+
+##### 4.6.2 链表二叉搜索树
+
