--- a/C语言/C和指针_读书笔记/第18章 运行时环境.md
+++ b/C语言/C和指针_读书笔记/第18章 运行时环境.md
@@ -1,4 +1,4 @@
-**1. 为什么函数入栈顺序从右往左？**
+### **1. 为什么函数入栈顺序从右往左？**
 
 - 从右到左的好处是，第一个参数就在栈顶，我们很方便就定位到了第一个参数的位置
 - 为什么要获得第一个参数的位置：首先，C语言库使用可变参数函数时，就必须要求有第一个参数，获得第一个参数，可以定位后续的参数。这里又会想出一个问题，那么，为什么C语言库要至少有1个参数，个人理解是，有一个参数可以方便用户处理后续的可变参数，因为如果你的代码中写死了后续参数的类型，你不如直接用固定参数，那么既然你使用了可变参数，就说明后续的类型个数，你可能是不确定的，你可以通过第一个参数来确定
