--- a/C语言/C和指针_读书笔记/第17章 经典抽象数据结构.md
+++ b/C语言/C和指针_读书笔记/第17章 经典抽象数据结构.md
@@ -388,12 +388,263 @@ void pre_order_traverse(void (*callback)(TREE_TYPE value));
 > 节点N的右孩子是 2N+2
 
 ```C
+// 使用静态数组实现二叉搜索树，长度用#define定义
 
+#include "tree.h"
+#include <assert.h>
+#include <stdio.h>
+
+#define TREE_SIZE 100
+#define ARRAY_SIZE (TREE_SIZE + 1)
+
+// 用于存储树的所有节点的数组
+static TREE_TYPE tree[ARRAY_SIZE];
+
+// left child
+static int left_child(int current){
+    return current*2;
+}
+
+// right child 
+static int right_child(int current){
+    return current*2 + 1;
+}
+
+void insert(TREE_TYPE value){
+    int current;
+
+    // 确保值为非0，因为0用提示一个未使用的节点
+    assert(value!=0);
+
+    // 从根节点开始
+    current = 1;
+
+    // 从合适的子树开始，直到到达一个叶子节点
+    while(tree[current]!=0){
+        // 根据情况，进入叶节点或者右子树
+        if(value < tree[current])
+            current = left_child(current);
+        else{
+            assert(value!=tree[current]);
+            current = right_child(current);
+        }
+        assert(current<ARRAY_SIZE);
+    }
+    tree[current] = value;
+}
+
+// find
+TREE_TYPE *find(TREE_TYPE value){
+    int current;
+
+    // 从根节点开始，直到找到那个值，进入合适的子树
+    current = 1;
+
+    while(current < ARRAY_SIZE && tree[current]!=value){
+        // 根据情况，进入左子树或者右子树
+        if( value < tree[current] )
+            current = left_child(current);
+        else
+            current = right_child(current);
+    }
+
+    if(current<ARRAY_SIZE)
+        return tree+current;
+    else
+        return 0;
+}
+
+// pre_order
+static void do_pre_order_traverse(int current, void (*callback)(TREE_TYPE value)){
+    if(current<ARRAY_SIZE && tree[current]!=0){
+        do_pre_order_traverse(left_child(current), callback);
+        do_pre_order_traverse(right_child(current), callback);
+    }
+}
+
+void pre_order_traverse(void (*callback)(TREE_TYPE value)){
+    do_pre_order_traverse(1, callback);
+}
 ```
 
 
 
-
-
 ##### 4.6.2 链表二叉搜索树
+
+```C
+// 一个使用动态分配的链式结构实现的二叉搜索树
+
+#include "tree.h"
+#include <assert.h>
+#include <stdio.h>
+#include <malloc.h>
+
+// TreeNode结构体
+typedef struct TREE_NODE{
+    TREE_TYPE   value;
+    struct TREE_NODE *left;
+    struct TREE_NODE *right;
+}TreeNode;
+
+// 指向根节点的指针
+static TreeNode *tree;
+
+// insert
+void insert( TREE_TYPE value ){
+    TreeNode *current;
+    TreeNode **link;
+
+    // 从根节点开始
+    link = &tree;
+
+    // 持续查找进入合适的子树
+    while( (current = *link) != NULL ){
+        if( value < current->value )
+            link = &current->left;
+        else{
+            assert( value != current->value );
+            link = &current->right;
+        }
+    }
+
+    // 分配一个新节点，使适当节点的link指向它
+    current = malloc( sizeof(TreeNode ) );
+    assert( current != NULL );
+    current->value = value;
+    current->left = NULL;
+    current->right = NULL;
+    *link = current;
+}
+
+// find
+TREE_TYPE *find(TREE_TYPE value){
+    TreeNode *current;
+    current = tree;
+    while(current!=NULL && current->value != value){
+        if(value < current->value)
+            current = current->left;
+        else
+            current = current->right;
+    }
+
+    if(current != NULL)
+        return &current->value;
+    else
+        return NULL;
+}
+
+// do_pre_order_traverse
+static void do_pre_order_traverse(TreeNode *current, void (*callback)(TREE_TYPE value)){
+    if(current != NULL){
+        callback(current->value);
+        do_pre_order_traverse(current->left, callback);
+        do_pre_order_traverse(current->right, callback);
+    }
+}
+
+void pre_order_traverse(void (*callback)(TREE_TYPE value)){
+    do_pre_order_traverse(tree, callback);
+}
+```
+
+
+
+### **5. 实现的改进**
+
+
+
+#### 5.1 拥有超过一个的堆栈
+
+从堆栈实现模块中去除数组和top_element的声明，并把他们放入到用户代码中即可
+
+然后通过参数呗堆栈函数访问，这些函数不再固定于某个数组，用户可以创建任意数量的数组，通过调用堆栈函数将他们作为堆栈使用
+
+
+
+#### 5.2 拥有超过一种类型
+
+- 编写另一份堆栈函数的拷贝
+- 将整个堆栈模块时限为一个#define宏，将目标类型作为参数
+- 使堆栈与类型无关，让他存储void*类型的值
+
+
+
+#### 5.3 名字冲突
+
+堆栈和队列函数命名统一规范
+
+`is_queue_empty`和`is_stack_empty`
+
+
+
+#### 5.4 C语言泛型
+
+```C
+#include <assert.h>
+
+#define     GENERIC_STACK( STACK_TYPE, SUFFIX, STACK_SIZE)      \
+            static STACK_TYPE   stack##SUFFIX[STACK_SIZE];      \
+            static int          top_element##SUFFIX = -1;       \
+                                                                \
+            int is_empty##SUFFIX(void)                          \
+            {                                                   \
+                return top_element##SUFFIX == -1;               \   
+            }                                                   \
+                                                                \
+            int is_full##SUFFIX(void)                           \
+            {                                                   \
+                return top_element##SUFFIX == STACK_SIZE - 1;   \
+            }                                                   \  
+                                                                \
+            void push##SUFFIX(STACK_TYPE value)                 \
+            {                                                   \
+                assert(!is_full##SUFFIX());                     \
+                top_element##SUFFIX += 1                        \
+                stack##SUFFIX[top_element##SUFFIX] = value;     \
+            }                                                   \
+                                                                \
+            void pop##SUFFIX(void)                              \
+            {                                                   \
+                assert(!is_empty##SUFFIX());                    \
+                top_element##SUFFIX -= 1;                       \
+            }                                                   \
+                                                                \
+            STACK_TYPE top#SUFFIX(void)                         \
+            {                                                   \
+                assert(!is_empty##SUFFIX());                    \
+                return stack##SUFFIX[top_element##SUFFIX ];     \
+            }                                                   \
+
+```
+
+````C
+#include <stdlib.h>
+#include <stdio.h>
+#include "g_stack.h"
+
+// 创建两个堆栈
+GENERIC_STACK(int, _int, 10)
+GENERIC_STACK(float, _float, 5)
+
+int main(){
+    // 王堆栈中压入值
+    push_int(5);
+    push_int(22);
+    push_int(15);
+    push_float(25.3);
+    push_float(-40.5);
+    
+    // 清空堆栈并打印
+    while(!is_empty_int()){
+        printf("Popping %d\n", top_int());
+        pop_int();
+    }
+    while(!is_empty_float()){
+        printf("Popping %f\n", top_float());
+        pop_float();
+    }
+    
+    return EXIT_SUCCESS;
+}
+````
 
